Fix overflowing issues on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -50,7 +50,6 @@ img {
 #results, #code {
   display: flex;
   flex-direction: column;
-  max-width: 90vw;
 }
 
 .tags span ~ span::before {
